// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RefereedSourceField component should render default view 1`] = `
<GenericSelectField
  error={false}
  errorText=""
  genericSelectFieldId="rek-refereed-source"
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Not yet assessed",
        "value": "453638",
      },
      Object {
        "text": "Ulrichs",
        "value": "453635",
      },
      Object {
        "text": "Thomson Reuters",
        "value": "453634",
      },
      Object {
        "text": "ERA Journal List 2012",
        "value": "453632",
      },
      Object {
        "text": "ERA Journal List 2015",
        "value": "453631",
      },
      Object {
        "text": "ERA Journal List 2010",
        "value": "453633",
      },
      Object {
        "text": "Other",
        "value": "453636",
      },
      Object {
        "text": "Not peer reviewed",
        "value": "453637",
      },
    ]
  }
  locale={
    Object {
      "label": undefined,
    }
  }
  value={Array []}
/>
`;

exports[`RefereedSourceField component should render immutable list as selected value with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-refereed-source"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Immutable.List [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Not yet assessed",
        "value": "453638",
      },
      Object {
        "text": "Ulrichs",
        "value": "453635",
      },
      Object {
        "text": "Thomson Reuters",
        "value": "453634",
      },
      Object {
        "text": "ERA Journal List 2012",
        "value": "453632",
      },
      Object {
        "text": "ERA Journal List 2015",
        "value": "453631",
      },
      Object {
        "text": "ERA Journal List 2010",
        "value": "453633",
      },
      Object {
        "text": "Other",
        "value": "453636",
      },
      Object {
        "text": "Not peer reviewed",
        "value": "453637",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;

exports[`RefereedSourceField component should render when given a default value field props 1`] = `
<GenericSelectField
  defaultValue="afr"
  error={false}
  errorText=""
  genericSelectFieldId="rek-refereed-source"
  hideLabel={false}
  itemsList={
    Array [
      Object {
        "text": "Not yet assessed",
        "value": "453638",
      },
      Object {
        "text": "Ulrichs",
        "value": "453635",
      },
      Object {
        "text": "Thomson Reuters",
        "value": "453634",
      },
      Object {
        "text": "ERA Journal List 2012",
        "value": "453632",
      },
      Object {
        "text": "ERA Journal List 2015",
        "value": "453631",
      },
      Object {
        "text": "ERA Journal List 2010",
        "value": "453633",
      },
      Object {
        "text": "Other",
        "value": "453636",
      },
      Object {
        "text": "Not peer reviewed",
        "value": "453637",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  placeholder="Test placeholder"
  value={
    Array [
      "afr",
    ]
  }
/>
`;

exports[`RefereedSourceField component should render with given field props 1`] = `
<GenericSelectField
  error={true}
  errorText="Test error"
  genericSelectFieldId="rek-refereed-source"
  hideLabel={false}
  input={
    Object {
      "onChange": [MockFunction],
      "value": Array [
        "One",
        "Two",
      ],
    }
  }
  itemsList={
    Array [
      Object {
        "text": "Not yet assessed",
        "value": "453638",
      },
      Object {
        "text": "Ulrichs",
        "value": "453635",
      },
      Object {
        "text": "Thomson Reuters",
        "value": "453634",
      },
      Object {
        "text": "ERA Journal List 2012",
        "value": "453632",
      },
      Object {
        "text": "ERA Journal List 2015",
        "value": "453631",
      },
      Object {
        "text": "ERA Journal List 2010",
        "value": "453633",
      },
      Object {
        "text": "Other",
        "value": "453636",
      },
      Object {
        "text": "Not peer reviewed",
        "value": "453637",
      },
    ]
  }
  label="Test label"
  locale={
    Object {
      "label": "Test label",
    }
  }
  meta={
    Object {
      "error": "Test error",
    }
  }
  onChange={[MockFunction]}
  placeholder="Test placeholder"
  value={
    Array [
      "One",
      "Two",
    ]
  }
/>
`;
